css/queries.css
/****************************************************/
/* BELOW 1344px (smaller Desktop) */
/****************************************************/

@media (max-width: 85em) {
    .hero {
        max-width: 120rem;
    }

    .header-primary {
        font-size: 4.4rem;
    }

    .section-testimonails {
        grid-template-columns: 1fr;
    }

    .gallery {
        grid-template-columns: repeat(6, 1fr);
    }
}

/****************************************************/
/* 1200px (LandScape Tablets) */
/****************************************************/
@media (max-width: 75em) {
    html {
        font-size: 56.25%;
    }

    .header {
        padding: 0 3.2rem;
    }

    .main-nav-list {
        gap: 3.2rem;
    }

    .hero,
    .grid {
        column-gap: 4.8rem;
        row-gap: 6.4rem;
    }

    .heading-secondary {
        font-size: 3.6rem;
    }

    .heading-tertiary {
        font-size: 2.4rem;
    }

    .testimonails-container {
        padding: 9.6rem 3.2rem;
    }

    .cta-form div:nth-child(3) {
        grid-column: 1/4;
    }

    .cta-form div:nth-child(4) {
        grid-column: 1/4;
    }
}

/****************************************************/
/* 944px ( Tablets) */
/****************************************************/

@media (max-width: 58em) {
    html {
        font-size: 50%;
    }

    .btn-mobile-nav {
        display: block;
    }

    .main-nav {
        background-color: rgba(253, 242, 233, 0.98);
        position: absolute;
        top: 0;
        left: 0;
        height: 50vh;
        width: 100%;
        transform: translateY(-100%);

        display: flex;
        justify-content: center;
        align-items: center;
        transition: all 0.7s ease-in;

        /* Hide navigation */
        /* allows no transition at all */
        /* display: none; */

        /* 1- hide it visibility */
        opacity: 0;

        /* 2- prevent mouse and keyboard event */
        pointer-events: none;

        /* 3- hide it from screen readers*/
        visibility: hidden;
    }

    .nav-open .main-nav {
        opacity: 1;
        pointer-events: auto;
        visibility: visible;
        transform: translateY(0);
    }

    .main-nav-list {
        flex-direction: column;
        gap: 4.8rem;
    }

    .nav-open .icon-mobile-nav[name="menu-outline"] {
        display: none;
    }

    .nav-open .icon-mobile-nav[name="close-outline"] {
        display: block;
    }

    .main-nav-link:link,
    .main-nav-link:visited {
        font-size: 3.2rem;
    }

    .hero {
        grid-template-columns: 1.5fr 1fr;
    }

    .logos img {
        height: 3.2rem;
    }

    .logos img:nth-of-type(5) {
        grid-column: 1/-1;
        justify-self: center;
    }

    .step-number {
        font-size: 7.4rem;
    }

    .pricing-plan {
        padding: 4.8rem 2.4rem 4.8rem;
    }

    .cta {
        height: 69rem;
        grid-template-columns: 1.5fr 1fr;
    }

    .cta-form {
        grid-template-columns: repeat(3, 1fr);
    }

    .cta-text-box {
        padding: 4.8rem 4.8rem 6.4rem;
    }

    .cta-form div:nth-child(1) {
        grid-column: 1/4;
    }

    .cta-form div:nth-child(2) {
        grid-column: 1/4;
    }

    .cta-form div:nth-child(4) {
        margin-top: 2.4rem;
    }
}

/****************************************************/
/* 740px ( smaller tablets) */
/****************************************************/

@media (max-width: 46em) {
    html {
        font-size: 43.75%;
    }

    .hero {
        grid-template-columns: 1fr;
    }

    /* .hero-text-box { */
    .section-hero {
        background-image: linear-gradient(
                to bottom,

                rgba(0, 0, 0, 0.8),
                rgba(0, 0, 0, 0.7),
                rgba(0, 0, 0, 0.8)
            ),
            url("/food-/img/hero.png");
        background-position: center;
        background-repeat: no-repeat;
        background-size: cover;
    }

    .grid-2-cols {
        grid-template-columns: 1fr;
    }

    .step-img-box:nth-child(2) {
        grid-row: 1;
    }
    .step-img-box:nth-child(6) {
        grid-row: 5;
    }

    .step-img-box {
        transform: translateY(3.2rem);
    }

    .diets {
        grid-column: 1/-1;
        justify-self: center;
    }

    .testimonials {
        grid-template-columns: 1fr;
    }

    .header-primary {
        font-size: 3.2rem;
        color: #fff;
    }
    .hero-description,
    .delivered-text {
        color: #fff;
    }

    .hero-img-box {
        display: none;
    }

    .logos {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        justify-items: center;
        column-gap: 2.4rem;
        row-gap: 3.2rem;
    }

    .step-number {
        font-size: 6.2rem;
    }

    .heading-secondary {
        font-size: 2.4rem;
        margin-bottom: 4.8rem;
    }

    .grid-3-cols {
        grid-template-columns: repeat(2, 1fr);
    }

    .grid-4-cols {
        grid-template-columns: repeat(2, 1fr);
    }

    .gallery {
        grid-template-columns: repeat(3, 1fr);
    }

    .pricing-plan {
        width: 100%;
    }

    /* .query-grid {
        grid-template-columns: 1fr;
        justify-items: center;
    } */

    .pricing-plan-starter {
        justify-self: center;
    }

    .cta {
        height: 69rem;
        grid-template-columns: 1fr;
        position: relative;
        overflow: hidden;
        background-image: linear-gradient(
                rgba(0, 0, 0, 0.8),
                rgba(0, 0, 0, 0.7),
                rgba(0, 0, 0, 0.8)
            ),
            url("/food-/img/eating.jpg");
        background: cover;
        background-position: center;
        background-repeat: no-repeat;
    }

    .cta-text,
    .cta-text-box h2,
    .cta-form label {
        color: #fff !important;
    }

    .cta-img-box {
        display: none;
    }

    .grid-footer {
        grid-template-columns: repeat(6, 1fr);
        column-gap: 2.4rem;
    }

    .logo-col,
    .address-col {
        grid-column: span 3;
    }

    .nav-col {
        grid-column: span 2;
    }

    footer {
        position: relative;
    }
    .copyright {
        position: absolute;
        bottom: 5%;
    }

    .contacts p br {
        display: none;
    }
}

/****************************************************/
/* 564px ( smaller tablets) */
/****************************************************/

@media (max-width: 35em) {
    .header-primary {
        font-size: 3rem;
    }

    .query-grid {
        grid-template-columns: 1fr;
        justify-items: center;
    }

    .pricing-plan {
        width: auto;
    }

    .logos {
        row-gap: 4.8rem;
    }

    /* flex box gap */

    .social-links {
        gap: 0;
    }

    .social-links li {
        margin-right: 2.4rem;
    }

    .contacts p br {
        display: block;
    }

    .contacts > div {
        gap: 0;
    }

    .contacts p,
    .contacts a {
        margin-left: 2.4rem;
    }

    .footer-nav {
        gap: 0;
    }

    .footer-nav li:not(:last-of-type) {
        margin-bottom: 2.4rem;
    }
}

